--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="msapplication-tap-highlight" content="no" />
 	
     <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css?v=001">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
