--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1>The Explodal</h1>
                 <h2 class="huge">The Most Explosive Modal on the Web</h2>
                 <h2>100% CSS and one tiny line of JS.</h2>
-                <a href="#explode" class="ui--button" onclick="document.getElementById('boooom').setAttribute('src', 'assets/img/explode-med.gif');">Explode Modal</a>
+                <a href="#explode" class="ui--button" onclick="document.getElementById('boooom').setAttribute('src', 'assets/img/explode-med.gif');">Demo &mdash; Explode Modal</a>
                 <!-- ^^ necessary little bit of JS to make sure the animated GIF play (not affected by caching). -->
                 
                 <p><a href="https://github.com/jessekorzan/expodal"><small>GitHub</small></a></p>
