--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <a href="#explode" class="ui--button" onclick="document.getElementById('boooom').setAttribute('src', 'assets/img/explode-med.gif');">Demo &mdash; Explode Modal</a>
                 <!-- ^^ necessary little bit of JS to make sure the animated GIF play (not affected by caching). -->
                 
-                <p><small><a href="https://github.com/jessekorzan/expodal">GitHub</a> <sup>*</sup>and one explosive gif</small></p>
+                <p><small><i><sup>*</sup>and one explosive gif</i><br>
+                <a href="https://github.com/jessekorzan/expodal">GitHub</a></small></p>
             </div>
         </div>
     </div>
