--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <div>
                 <h1>The Explodal</h1>
                 <h2 class="huge">The Most Explosive Modal on the Web</h2>
-                <h2>100% CSS and one tiny line of JS<sup>*</sup></h2>
+                <h2>97.32% CSS and one tiny line of JS<sup>*</sup></h2>
                 <a href="#explode" class="ui--button" onclick="document.getElementById('boooom').setAttribute('src', 'assets/img/explode-med.gif');">Demo &mdash; Explode Modal</a>
                 <!-- ^^ necessary little bit of JS to make sure the animated GIF play (not affected by caching). -->
                 
-                <p><small><i><sup>*</sup>and one explosive gif</i><br>
+                <p><small><i><sup>*</sup>and a wee gif</i><br>
                 <a href="https://github.com/jessekorzan/expodal">GitHub</a></small></p>
             </div>
         </div>
@@ -32,7 +32,7 @@
         <div>
             <a href="#close" class="material-icons ui--close">clear</a>
             <h3 class="huge">Boooooom!!!</h3>
-            <p>Somebody, quick! Get a bucket and a mop. There's a mind bomb to clean-up.</p>
+            <p>Bounce rates will be blown away. Conversions will rocket as your users fist-pump with every interaction on your site.</p>
             <a href="#close" class="ui--button alt">dismiss</a>
         </div>
         <div class="bg">
