--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                 <a href="#explode" class="ui--button" onclick="document.getElementById('boooom').setAttribute('src', 'assets/img/explode-med.gif');">Demo &mdash; Explode Modal</a>
                 <!-- ^^ necessary little bit of JS to make sure the animated GIF play (not affected by caching). -->
                 
-                <p><small><i><sup>*</sup>and a wee gif</i><br>
-                <a href="https://github.com/jessekorzan/expodal">GitHub</a></small></p>
+                <p><small><i><sup>*</sup>and a wee gif</i> &mdash; <a href="https://github.com/jessekorzan/expodal">View on GitHub</a></small></p>
             </div>
         </div>
     </div>
