--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <!-- ^^ necessary little bit of JS to make sure the animated GIF play (not affected by caching). -->
                 
                 <p><small><i><sup>*</sup>and a wee gif</i> &mdash; <a href="https://github.com/jessekorzan/expodal">View on GitHub</a></small></p>
+		<p><small><a href="http://emptycan.com">emptycan.com</a></small></p>
             </div>
         </div>
     </div>
